优化日志管理