@@ -29,6 +29,8 @@ import com.ghlzm.iot.device.vo.DevicePageVO;
 import com.ghlzm.iot.device.vo.DeviceReplaceResultVO;
 import com.ghlzm.iot.framework.config.IotProperties;
 import com.ghlzm.iot.framework.mybatis.PageQueryUtils;
+import com.ghlzm.iot.system.service.PermissionService;
+import com.ghlzm.iot.system.service.model.DataPermissionContext;
 import org.springframework.stereotype.Service;
 import org.springframework.transaction.annotation.Transactional;
 import org.springframework.util.CollectionUtils;
@@ -67,6 +69,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     private final UnregisteredDeviceRosterService unregisteredDeviceRosterService;
     private final IotProperties iotProperties;
     private final DeviceInvalidReportStateService invalidReportStateService;
+    private final PermissionService permissionService;
     private final ObjectMapper objectMapper = JsonMapper.builder().findAndAddModules().build();
 
     public DeviceServiceImpl(ProductService productService,
@@ -74,21 +77,29 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                              ProductModelMapper productModelMapper,
                              UnregisteredDeviceRosterService unregisteredDeviceRosterService,
                              IotProperties iotProperties,
-                             DeviceInvalidReportStateService invalidReportStateService) {
+                             DeviceInvalidReportStateService invalidReportStateService,
+                             PermissionService permissionService) {
         this.productService = productService;
         this.devicePropertyMapper = devicePropertyMapper;
         this.productModelMapper = productModelMapper;
         this.unregisteredDeviceRosterService = unregisteredDeviceRosterService;
         this.iotProperties = iotProperties;
         this.invalidReportStateService = invalidReportStateService;
+        this.permissionService = permissionService;
     }
 
     @Override
     @Transactional(rollbackFor = Exception.class)
     public DeviceDetailVO addDevice(DeviceAddDTO dto) {
-        Device device = createDeviceRecord(dto);
+        return addDevice(null, dto);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public DeviceDetailVO addDevice(Long currentUserId, DeviceAddDTO dto) {
+        Device device = createDeviceRecord(currentUserId, dto);
         resolveInvalidReportState(normalizeRequiredText(dto.getProductKey()), device.getDeviceCode());
-        return getDetailById(device.getId());
+        return currentUserId == null ? getDetailById(device.getId()) : getDetailById(currentUserId, device.getId());
     }
 
     @Override
@@ -100,6 +111,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         if (device == null) {
             throw new BizException("设备不存在: " + id);
         }
+        return device;
+    }
+
+    @Override
+    public Device getRequiredById(Long currentUserId, Long id) {
+        Device device = getRequiredById(id);
+        ensureDeviceAccessible(currentUserId, device);
         return device;
     }
 
@@ -116,17 +134,63 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     }
 
     @Override
+    public Device getRequiredByCode(Long currentUserId, String deviceCode) {
+        Device device = getRequiredByCode(deviceCode);
+        ensureDeviceAccessible(currentUserId, device);
+        return device;
+    }
+
+    @Override
     public DeviceDetailVO getDetailById(Long id) {
-        return toDetailVO(getRequiredById(id));
+        return getDetailById(null, id);
+    }
+
+    @Override
+    public DeviceDetailVO getDetailById(Long currentUserId, Long id) {
+        Device device = getRequiredById(id);
+        ensureDeviceAccessible(currentUserId, device);
+        return toDetailVO(currentUserId, device);
     }
 
     @Override
     public DeviceDetailVO getDetailByCode(String deviceCode) {
-        return toDetailVO(getRequiredByCode(deviceCode));
+        return getDetailByCode(null, deviceCode);
+    }
+
+    @Override
+    public DeviceDetailVO getDetailByCode(Long currentUserId, String deviceCode) {
+        Device device = getRequiredByCode(deviceCode);
+        ensureDeviceAccessible(currentUserId, device);
+        return toDetailVO(currentUserId, device);
     }
 
     @Override
     public PageResult<DevicePageVO> pageDevices(Long deviceId,
+                                                String productKey,
+                                                String deviceCode,
+                                                String deviceName,
+                                                Integer onlineStatus,
+                                                Integer activateStatus,
+                                                Integer deviceStatus,
+                                                Integer registrationStatus,
+                                                Long pageNum,
+                                                Long pageSize) {
+        return pageDevices(null,
+                deviceId,
+                productKey,
+                deviceCode,
+                deviceName,
+                onlineStatus,
+                activateStatus,
+                deviceStatus,
+                registrationStatus,
+                pageNum,
+                pageSize);
+    }
+
+    @Override
+    public PageResult<DevicePageVO> pageDevices(Long currentUserId,
+                                                Long deviceId,
                                                 String productKey,
                                                 String deviceCode,
                                                 String deviceName,
@@ -141,8 +205,9 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         long size = page.getSize();
 
         if (Integer.valueOf(REGISTERED_STATUS).equals(registrationStatus)) {
-            List<Long> filteredProductIds = resolveFilteredProductIds(productKey);
-            return pageRegisteredDevices(deviceId,
+            List<Long> filteredProductIds = resolveFilteredProductIds(currentUserId, productKey);
+            return pageRegisteredDevices(currentUserId,
+                    deviceId,
                     filteredProductIds,
                     deviceCode,
                     deviceName,
@@ -154,12 +219,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         }
 
         if (Integer.valueOf(UNREGISTERED_STATUS).equals(registrationStatus)) {
-            return pageUnregisteredDevices(deviceId, productKey, deviceCode, deviceName,
+            return pageUnregisteredDevices(currentUserId, deviceId, productKey, deviceCode, deviceName,
                     onlineStatus, activateStatus, deviceStatus, current, size);
         }
 
-        List<Long> filteredProductIds = resolveFilteredProductIds(productKey);
-        return pageCombinedDevices(deviceId,
+        List<Long> filteredProductIds = resolveFilteredProductIds(currentUserId, productKey);
+        return pageCombinedDevices(currentUserId,
+                deviceId,
                 filteredProductIds,
                 productKey,
                 deviceCode,
@@ -174,17 +240,31 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public DeviceDetailVO updateDevice(Long id, DeviceAddDTO dto) {
+        return updateDevice(null, id, dto);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public DeviceDetailVO updateDevice(Long currentUserId, Long id, DeviceAddDTO dto) {
         Device device = getRequiredById(id);
-        Product product = productService.getRequiredByProductKey(normalizeRequiredText(dto.getProductKey()));
+        ensureDeviceAccessible(currentUserId, device);
+        Product product = resolveAccessibleProduct(currentUserId, normalizeRequiredText(dto.getProductKey()));
         resolveDeviceArchiveContract(product);
-        ensureDeviceCodeUnique(normalizeRequiredText(dto.getDeviceCode()), id);
-        applyEditableFields(device, dto, product, false);
+        ensureDeviceCodeUnique(resolveEffectiveTenantId(currentUserId, device.getTenantId()),
+                normalizeRequiredText(dto.getDeviceCode()),
+                id);
+        applyEditableFields(currentUserId, device, dto, product, false);
         updateById(device);
-        return getDetailById(id);
+        return currentUserId == null ? getDetailById(id) : getDetailById(currentUserId, id);
     }
 
     @Override
     public DeviceBatchAddResultVO batchAddDevices(List<DeviceAddDTO> items) {
+        return batchAddDevices(null, items);
+    }
+
+    @Override
+    public DeviceBatchAddResultVO batchAddDevices(Long currentUserId, List<DeviceAddDTO> items) {
         if (CollectionUtils.isEmpty(items)) {
             throw new BizException("请至少提供一条设备数据");
         }
@@ -197,7 +277,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
             int rowNo = index + 1;
             try {
                 validateBatchAddItem(item, rowNo);
-                Device device = createDeviceRecord(item);
+                Device device = createDeviceRecord(currentUserId, item);
                 resolveInvalidReportState(normalizeRequiredText(item.getProductKey()), device.getDeviceCode());
                 createdDeviceCodes.add(device.getDeviceCode());
             } catch (Exception ex) {
@@ -221,15 +301,22 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public DeviceReplaceResultVO replaceDevice(Long id, DeviceReplaceDTO dto) {
+        return replaceDevice(null, id, dto);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public DeviceReplaceResultVO replaceDevice(Long currentUserId, Long id, DeviceReplaceDTO dto) {
         Device sourceDevice = getRequiredById(id);
+        ensureDeviceAccessible(currentUserId, sourceDevice);
         if (sourceDevice.getDeviceCode().equals(normalizeRequiredText(dto.getDeviceCode()))) {
             throw new BizException("新设备编码不能与原设备编码相同");
         }
 
-        Product targetProduct = resolveReplacementProduct(sourceDevice, dto.getProductKey());
+        Product targetProduct = resolveReplacementProduct(currentUserId, sourceDevice, dto.getProductKey());
         LocalDateTime replacementTime = LocalDateTime.now();
         DeviceAddDTO replacementDto = buildReplacementCreateDTO(sourceDevice, dto, targetProduct, replacementTime);
-        Device replacementDevice = createDeviceRecord(replacementDto);
+        Device replacementDevice = createDeviceRecord(currentUserId, replacementDto);
         resolveInvalidReportState(targetProduct.getProductKey(), replacementDevice.getDeviceCode());
 
         Integer previousOnlineStatus = sourceDevice.getOnlineStatus();
@@ -255,7 +342,14 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void deleteDevice(Long id) {
-        getRequiredById(id);
+        deleteDevice(null, id);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void deleteDevice(Long currentUserId, Long id) {
+        Device device = getRequiredById(id);
+        ensureDeviceAccessible(currentUserId, device);
         if (!removeById(id)) {
             throw new BizException("设备删除失败，请稍后重试");
         }
@@ -264,6 +358,12 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
     @Override
     @Transactional(rollbackFor = Exception.class)
     public void batchDeleteDevices(List<Long> ids) {
+        batchDeleteDevices(null, ids);
+    }
+
+    @Override
+    @Transactional(rollbackFor = Exception.class)
+    public void batchDeleteDevices(Long currentUserId, List<Long> ids) {
         if (CollectionUtils.isEmpty(ids)) {
             throw new BizException("请选择需要删除的设备");
         }
@@ -274,6 +374,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         if (CollectionUtils.isEmpty(devices)) {
             throw new BizException("未找到可删除的设备");
         }
+        devices.forEach(device -> ensureDeviceAccessible(currentUserId, device));
         List<Long> existingIds = devices.stream().map(Device::getId).collect(Collectors.toList());
         if (!removeByIds(existingIds)) {
             throw new BizException("设备批量删除失败，请稍后重试");
@@ -282,7 +383,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
 
     @Override
     public List<DeviceProperty> listProperties(String deviceCode) {
+        return listProperties(null, deviceCode);
+    }
+
+    @Override
+    public List<DeviceProperty> listProperties(Long currentUserId, String deviceCode) {
         Device device = getRequiredByCode(deviceCode);
+        ensureDeviceAccessible(currentUserId, device);
         return devicePropertyMapper.selectList(
                 new LambdaQueryWrapper<DeviceProperty>()
                         .eq(DeviceProperty::getDeviceId, device.getId())
@@ -292,14 +399,20 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
 
     @Override
     public List<DeviceOptionVO> listDeviceOptions(boolean includeDisabled) {
+        return listDeviceOptions(null, includeDisabled);
+    }
+
+    @Override
+    public List<DeviceOptionVO> listDeviceOptions(Long currentUserId, boolean includeDisabled) {
         LambdaQueryWrapper<Device> wrapper = new LambdaQueryWrapper<Device>()
                 .eq(Device::getDeleted, 0)
                 .orderByDesc(Device::getCreateTime);
+        applyDeviceScope(wrapper, currentUserId);
         if (!includeDisabled) {
             wrapper.eq(Device::getDeviceStatus, DeviceStatusEnum.ENABLED.getCode());
         }
         List<Device> devices = list(wrapper);
-        Map<Long, Product> productMap = loadProductMap(devices.stream().map(Device::getProductId).toList());
+        Map<Long, Product> productMap = loadProductMap(resolveScopedTenantId(currentUserId), devices.stream().map(Device::getProductId).toList());
         return devices.stream()
                 .map(device -> toDeviceOption(device, productMap.get(device.getProductId())))
                 .toList();
@@ -307,7 +420,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
 
     @Override
     public List<DeviceMetricOptionVO> listMetricOptions(Long deviceId) {
+        return listMetricOptions(null, deviceId);
+    }
+
+    @Override
+    public List<DeviceMetricOptionVO> listMetricOptions(Long currentUserId, Long deviceId) {
         Device device = getRequiredById(deviceId);
+        ensureDeviceAccessible(currentUserId, device);
         Map<String, DeviceMetricOptionVO> optionMap = new LinkedHashMap<>();
 
         List<ProductModel> productModels = productModelMapper.selectList(
@@ -348,14 +467,17 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return optionMap.values().stream().collect(Collectors.toList());
     }
 
-    private Device createDeviceRecord(DeviceAddDTO dto) {
-        Product product = productService.getRequiredByProductKey(normalizeRequiredText(dto.getProductKey()));
+    private Device createDeviceRecord(Long currentUserId, DeviceAddDTO dto) {
+        Product product = resolveAccessibleProduct(currentUserId, normalizeRequiredText(dto.getProductKey()));
         resolveDeviceArchiveContract(product);
-        ensureDeviceCodeUnique(normalizeRequiredText(dto.getDeviceCode()), null);
+        ensureDeviceCodeUnique(resolveEffectiveTenantId(currentUserId, product.getTenantId()),
+                normalizeRequiredText(dto.getDeviceCode()),
+                null);
 
         Device device = new Device();
+        device.setTenantId(resolveEffectiveTenantId(currentUserId, product.getTenantId()));
         // 创建设备时统一从产品继承协议、节点类型，并落初始化状态字段。
-        applyEditableFields(device, dto, product, true);
+        applyEditableFields(currentUserId, device, dto, product, true);
         save(device);
         return device;
     }
@@ -382,10 +504,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return new DeviceArchiveContract(product.getId(), protocolCode, product.getNodeType());
     }
 
-    private void ensureDeviceCodeUnique(String deviceCode, Long excludeId) {
+    private void ensureDeviceCodeUnique(Long tenantId, String deviceCode, Long excludeId) {
         LambdaQueryWrapper<Device> wrapper = new LambdaQueryWrapper<Device>()
                 .eq(Device::getDeviceCode, deviceCode)
                 .eq(Device::getDeleted, 0);
+        if (tenantId != null) {
+            wrapper.eq(Device::getTenantId, tenantId);
+        }
         if (excludeId != null) {
             wrapper.ne(Device::getId, excludeId);
         }
@@ -413,15 +538,16 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         }
     }
 
-    private Product resolveReplacementProduct(Device sourceDevice, String productKey) {
+    private Product resolveReplacementProduct(Long currentUserId, Device sourceDevice, String productKey) {
         String normalizedProductKey = normalizeOptionalText(productKey);
         if (normalizedProductKey != null) {
-            return productService.getRequiredByProductKey(normalizedProductKey);
+            return resolveAccessibleProduct(currentUserId, normalizedProductKey);
         }
         Product product = productService.getById(sourceDevice.getProductId());
         if (product == null || product.getDeleted() != null && product.getDeleted() == 1) {
             throw new BizException("原设备所属产品不存在，无法执行更换");
         }
+        ensureProductAccessible(currentUserId, product);
         return product;
     }
 
@@ -525,10 +651,11 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         invalidReportStateService.markResolvedByDevice(productKey.trim(), deviceCode.trim(), LocalDateTime.now());
     }
 
-    private void applyEditableFields(Device device, DeviceAddDTO dto, Product product, boolean initializeDefaults) {
+    private void applyEditableFields(Long currentUserId, Device device, DeviceAddDTO dto, Product product, boolean initializeDefaults) {
         DeviceArchiveContract archiveContract = resolveDeviceArchiveContract(product);
-        Device parentDevice = resolveParentDevice(dto, device.getId());
+        Device parentDevice = resolveParentDevice(currentUserId, dto, device.getId());
         device.setProductId(archiveContract.productId());
+        device.setTenantId(resolveEffectiveTenantId(currentUserId, product.getTenantId()));
         device.setGatewayId(resolveGatewayId(archiveContract.nodeType(), parentDevice));
         device.setParentDeviceId(parentDevice != null ? parentDevice.getId() : null);
         device.setDeviceName(normalizeRequiredText(dto.getDeviceName()));
@@ -572,7 +699,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return deviceStatus != null ? deviceStatus : DeviceStatusEnum.ENABLED.getCode();
     }
 
-    private LambdaQueryWrapper<Device> buildDeviceQueryWrapper(Long deviceId,
+    private LambdaQueryWrapper<Device> buildDeviceQueryWrapper(Long currentUserId,
+                                                               Long deviceId,
                                                                List<Long> filteredProductIds,
                                                                String deviceCode,
                                                                String deviceName,
@@ -580,6 +708,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                                                                Integer activateStatus,
                                                                Integer deviceStatus) {
         LambdaQueryWrapper<Device> wrapper = new LambdaQueryWrapper<>();
+        applyDeviceScope(wrapper, currentUserId);
         if (deviceId != null) {
             wrapper.eq(Device::getId, deviceId);
         }
@@ -605,11 +734,13 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return wrapper;
     }
 
-    private List<Long> resolveFilteredProductIds(String productKey) {
+    private List<Long> resolveFilteredProductIds(Long currentUserId, String productKey) {
         if (!StringUtils.hasText(productKey)) {
             return null;
         }
+        Long tenantId = resolveScopedTenantId(currentUserId);
         return productService.lambdaQuery()
+                .eq(tenantId != null, Product::getTenantId, tenantId)
                 .like(Product::getProductKey, productKey.trim())
                 .eq(Product::getDeleted, 0)
                 .list()
@@ -618,20 +749,22 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                 .toList();
     }
 
-    private List<DevicePageVO> toPageVOList(List<Device> devices) {
+    private List<DevicePageVO> toPageVOList(Long currentUserId, List<Device> devices) {
         if (CollectionUtils.isEmpty(devices)) {
             return List.of();
         }
-        Map<Long, Product> productMap = loadProductMap(devices.stream().map(Device::getProductId).toList());
-        Map<Long, Device> relationDeviceMap = loadRelationDeviceMap(devices);
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        Map<Long, Product> productMap = loadProductMap(tenantId, devices.stream().map(Device::getProductId).toList());
+        Map<Long, Device> relationDeviceMap = loadRelationDeviceMap(tenantId, devices);
         return devices.stream()
                 .map(device -> toPageVO(device, productMap.get(device.getProductId()), relationDeviceMap))
                 .toList();
     }
 
-    private DeviceDetailVO toDetailVO(Device device) {
-        Product product = productService.getById(device.getProductId());
-        Map<Long, Device> relationDeviceMap = loadDeviceMap(java.util.Arrays.asList(device.getGatewayId(), device.getParentDeviceId()));
+    private DeviceDetailVO toDetailVO(Long currentUserId, Device device) {
+        Long tenantId = resolveEffectiveTenantId(currentUserId, device == null ? null : device.getTenantId());
+        Product product = loadProductMap(tenantId, List.of(device.getProductId())).get(device.getProductId());
+        Map<Long, Device> relationDeviceMap = loadDeviceMap(tenantId, java.util.Arrays.asList(device.getGatewayId(), device.getParentDeviceId()));
         DeviceDetailVO detail = new DeviceDetailVO();
         detail.setId(device.getId());
         detail.setProductId(device.getProductId());
@@ -694,7 +827,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return row;
     }
 
-    private PageResult<DevicePageVO> pageRegisteredDevices(Long deviceId,
+    private PageResult<DevicePageVO> pageRegisteredDevices(Long currentUserId,
+                                                           Long deviceId,
                                                            List<Long> filteredProductIds,
                                                            String deviceCode,
                                                            String deviceName,
@@ -709,6 +843,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
 
         Page<Device> page = PageQueryUtils.buildPage(pageNum, pageSize);
         Page<Device> result = page(page, buildDeviceQueryWrapper(
+                currentUserId,
                 deviceId,
                 filteredProductIds,
                 deviceCode,
@@ -717,11 +852,12 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                 activateStatus,
                 deviceStatus
         ));
-        List<DevicePageVO> records = toPageVOList(result.getRecords());
+        List<DevicePageVO> records = toPageVOList(currentUserId, result.getRecords());
         return PageResult.of(result.getTotal(), result.getCurrent(), result.getSize(), records);
     }
 
-    private PageResult<DevicePageVO> pageUnregisteredDevices(Long deviceId,
+    private PageResult<DevicePageVO> pageUnregisteredDevices(Long currentUserId,
+                                                             Long deviceId,
                                                              String productKey,
                                                              String deviceCode,
                                                              String deviceName,
@@ -735,11 +871,22 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         }
 
         long offset = Math.max(pageNum - 1, 0L) * pageSize;
-        long total = unregisteredDeviceRosterService.countByFilters(normalizeOptionalText(productKey), normalizeOptionalText(deviceCode));
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        long total = tenantId == null
+                ? unregisteredDeviceRosterService.countByFilters(normalizeOptionalText(productKey), normalizeOptionalText(deviceCode))
+                : unregisteredDeviceRosterService.countByFilters(tenantId, normalizeOptionalText(productKey), normalizeOptionalText(deviceCode));
         if (total <= 0L) {
             return PageResult.empty(pageNum, pageSize);
         }
-        List<DevicePageVO> records = unregisteredDeviceRosterService.listByFilters(
+        List<DevicePageVO> records = tenantId == null
+                ? unregisteredDeviceRosterService.listByFilters(
+                normalizeOptionalText(productKey),
+                normalizeOptionalText(deviceCode),
+                offset,
+                pageSize
+        )
+                : unregisteredDeviceRosterService.listByFilters(
+                tenantId,
                 normalizeOptionalText(productKey),
                 normalizeOptionalText(deviceCode),
                 offset,
@@ -748,7 +895,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return PageResult.of(total, pageNum, pageSize, records);
     }
 
-    private PageResult<DevicePageVO> pageCombinedDevices(Long deviceId,
+    private PageResult<DevicePageVO> pageCombinedDevices(Long currentUserId,
+                                                         Long deviceId,
                                                          List<Long> filteredProductIds,
                                                          String productKey,
                                                          String deviceCode,
@@ -758,15 +906,19 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                                                          Integer deviceStatus,
                                                          long pageNum,
                                                          long pageSize) {
-        long registeredTotal = countRegisteredDevices(filteredProductIds,
+        long registeredTotal = countRegisteredDevices(currentUserId,
+                filteredProductIds,
                 deviceId,
                 deviceCode,
                 deviceName,
                 onlineStatus,
                 activateStatus,
                 deviceStatus);
+        Long tenantId = resolveScopedTenantId(currentUserId);
         long unregisteredTotal = canMatchUnregisteredDevices(deviceId, deviceName, onlineStatus, activateStatus, deviceStatus)
+                ? (tenantId == null
                 ? unregisteredDeviceRosterService.countByFilters(normalizeOptionalText(productKey), normalizeOptionalText(deviceCode))
+                : unregisteredDeviceRosterService.countByFilters(tenantId, normalizeOptionalText(productKey), normalizeOptionalText(deviceCode)))
                 : 0L;
         long total = registeredTotal + unregisteredTotal;
         if (total <= 0L) {
@@ -776,7 +928,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         long offset = Math.max(pageNum - 1, 0L) * pageSize;
         List<DevicePageVO> records = new ArrayList<>();
         if (offset < registeredTotal) {
-            PageResult<DevicePageVO> registeredPage = pageRegisteredDevices(deviceId,
+            PageResult<DevicePageVO> registeredPage = pageRegisteredDevices(currentUserId,
+                    deviceId,
                     filteredProductIds,
                     deviceCode,
                     deviceName,
@@ -791,7 +944,15 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         long remaining = pageSize - records.size();
         if (remaining > 0L && unregisteredTotal > 0L) {
             long unregisteredOffset = Math.max(0L, offset - registeredTotal);
-            records.addAll(unregisteredDeviceRosterService.listByFilters(
+            records.addAll(tenantId == null
+                    ? unregisteredDeviceRosterService.listByFilters(
+                    normalizeOptionalText(productKey),
+                    normalizeOptionalText(deviceCode),
+                    unregisteredOffset,
+                    remaining
+            )
+                    : unregisteredDeviceRosterService.listByFilters(
+                    tenantId,
                     normalizeOptionalText(productKey),
                     normalizeOptionalText(deviceCode),
                     unregisteredOffset,
@@ -801,7 +962,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return PageResult.of(total, pageNum, pageSize, records);
     }
 
-    private long countRegisteredDevices(List<Long> filteredProductIds,
+    private long countRegisteredDevices(Long currentUserId,
+                                        List<Long> filteredProductIds,
                                         Long deviceId,
                                         String deviceCode,
                                         String deviceName,
@@ -812,6 +974,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
             return 0L;
         }
         return count(buildDeviceQueryWrapper(
+                currentUserId,
                 deviceId,
                 filteredProductIds,
                 deviceCode,
@@ -834,7 +997,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
                 && deviceStatus == null;
     }
 
-    private Map<Long, Product> loadProductMap(List<Long> productIds) {
+    private Map<Long, Product> loadProductMap(Long tenantId, List<Long> productIds) {
         List<Long> filteredIds = productIds.stream()
                 .filter(Objects::nonNull)
                 .distinct()
@@ -842,18 +1005,34 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         if (CollectionUtils.isEmpty(filteredIds)) {
             return Collections.emptyMap();
         }
-        return productService.listByIds(filteredIds)
-                .stream()
+        if (tenantId == null) {
+            List<Product> products = productService.listByIds(filteredIds);
+            if (CollectionUtils.isEmpty(products)) {
+                return Collections.emptyMap();
+            }
+            return products
+                    .stream()
+                    .collect(Collectors.toMap(Product::getId, product -> product, (left, right) -> left));
+        }
+        List<Product> products = productService.lambdaQuery()
+                .in(Product::getId, filteredIds)
+                .eq(tenantId != null, Product::getTenantId, tenantId)
+                .eq(Product::getDeleted, 0)
+                .list();
+        if (CollectionUtils.isEmpty(products)) {
+            return Collections.emptyMap();
+        }
+        return products.stream()
                 .collect(Collectors.toMap(Product::getId, product -> product, (left, right) -> left));
     }
 
-    private Map<Long, Device> loadRelationDeviceMap(List<Device> devices) {
-        return loadDeviceMap(devices.stream()
+    private Map<Long, Device> loadRelationDeviceMap(Long tenantId, List<Device> devices) {
+        return loadDeviceMap(tenantId, devices.stream()
                 .flatMap(device -> java.util.stream.Stream.of(device.getGatewayId(), device.getParentDeviceId()))
                 .toList());
     }
 
-    private Map<Long, Device> loadDeviceMap(List<Long> deviceIds) {
+    private Map<Long, Device> loadDeviceMap(Long tenantId, List<Long> deviceIds) {
         List<Long> filteredIds = deviceIds.stream()
                 .filter(Objects::nonNull)
                 .distinct()
@@ -863,6 +1042,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         }
         return lambdaQuery()
                 .in(Device::getId, filteredIds)
+                .eq(tenantId != null, Device::getTenantId, tenantId)
                 .eq(Device::getDeleted, 0)
                 .list()
                 .stream()
@@ -894,7 +1074,7 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         return relationDeviceMap.get(relationDeviceId);
     }
 
-    private Device resolveParentDevice(DeviceAddDTO dto, Long currentDeviceId) {
+    private Device resolveParentDevice(Long currentUserId, DeviceAddDTO dto, Long currentDeviceId) {
         String parentDeviceCode = normalizeOptionalText(dto.getParentDeviceCode());
         if (dto.getParentDeviceId() != null && parentDeviceCode != null) {
             throw new BizException("父设备主键和父设备编码不能同时填写");
@@ -904,8 +1084,8 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
         }
 
         Device parentDevice = dto.getParentDeviceId() != null
-                ? getRequiredById(dto.getParentDeviceId())
-                : getRequiredByCode(parentDeviceCode);
+                ? getRequiredById(currentUserId, dto.getParentDeviceId())
+                : getRequiredByCode(currentUserId, parentDeviceCode);
 
         if (currentDeviceId != null && currentDeviceId.equals(parentDevice.getId())) {
             throw new BizException("父设备不能选择当前设备");
@@ -968,6 +1148,71 @@ public class DeviceServiceImpl extends ServiceImpl<DeviceMapper, Device> impleme
             throw new BizException("必填字段不能为空");
         }
         return normalized;
+    }
+
+    private void applyDeviceScope(LambdaQueryWrapper<Device> wrapper, Long currentUserId) {
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        if (tenantId != null) {
+            wrapper.eq(Device::getTenantId, tenantId);
+        }
+    }
+
+    private Product resolveAccessibleProduct(Long currentUserId, String productKey) {
+        String normalizedProductKey = normalizeRequiredText(productKey);
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        if (tenantId == null) {
+            return productService.getRequiredByProductKey(normalizedProductKey);
+        }
+        Product product = productService.lambdaQuery()
+                .eq(Product::getProductKey, normalizedProductKey)
+                .eq(Product::getDeleted, 0)
+                .eq(tenantId != null, Product::getTenantId, tenantId)
+                .one();
+        if (product == null) {
+            throw new BizException("产品不存在: " + normalizedProductKey);
+        }
+        ensureProductAccessible(currentUserId, product);
+        return product;
+    }
+
+    private void ensureProductAccessible(Long currentUserId, Product product) {
+        if (currentUserId == null || product == null) {
+            return;
+        }
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        if (tenantId != null && !tenantId.equals(product.getTenantId())) {
+            throw new BizException("产品不存在或无权访问");
+        }
+    }
+
+    private void ensureDeviceAccessible(Long currentUserId, Device device) {
+        if (currentUserId == null || device == null) {
+            return;
+        }
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        if (tenantId != null && !tenantId.equals(device.getTenantId())) {
+            throw new BizException("设备不存在或无权访问");
+        }
+    }
+
+    private Long resolveScopedTenantId(Long currentUserId) {
+        DataPermissionContext context = resolveDataPermissionContext(currentUserId);
+        if (context == null || context.superAdmin()) {
+            return null;
+        }
+        return context.tenantId();
+    }
+
+    private Long resolveEffectiveTenantId(Long currentUserId, Long fallbackTenantId) {
+        Long tenantId = resolveScopedTenantId(currentUserId);
+        return tenantId != null ? tenantId : fallbackTenantId;
+    }
+
+    private DataPermissionContext resolveDataPermissionContext(Long currentUserId) {
+        if (currentUserId == null || permissionService == null) {
+            return null;
+        }
+        return permissionService.getDataPermissionContext(currentUserId);
     }
 
     private DeviceOptionVO toDeviceOption(Device device, Product product) {
